--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <h1>Introdução à química orgânica</h1>    
 <p>A química orgânica é a disciplina que se dedica ao estudo dos compostos de carbono, também conhecidos como compostos orgânicos, e suas características físicas, reações com outros elementos químicos, síntese e composição. O carbono está presente nos organismos vivos e, nesse sentido, se difere da área de estudo da química inorgânica, que estuda os elementos presentes no reino mineral.</p>
-<p>História da química orgânica</p>
+<p><b>História da química orgânica</b></p>
 <p>Desde a antiguidade, os compostos orgânicos tinham as suas propriedades conhecidas, como o álcool obtido por meio da fermentação e alguns corantes extraídos de elementos da natureza. Esses estudos e experimentações foram evoluindo ao longo da Idade Média e tiveram o seu ápice de desenvolvimento no início da Era Moderna, quando os métodos científicos permitiram isolar e conhecer a composição desses elementos.</p>
 <p>O objeto de estudo inicial foi formulado pelo químico sueco Tornern Olof Bergman, em 1977, que consiste na classificação da química orgânica como o estudo dos compostos extraídos dos organismos vivos. Já em 1807, Jöns Jacob Berzelius levou à frente seus estudos relativos à teoria da força vital, em que revelava a necessidade de uma força maior – a vida – para sintetizar os elementos, colocando como impossível a sua síntese artificial.</p>
 <p>Porém, em 1828, <i>Friedrich Wöhler</i>, discípulo de Berzelius, conseguiu produzir ureia – um componente da urina animal – a partir do aquecimento do cianato de amônio, demonstrando a possibilidade de se sintetizar um composto orgânico a partir de um composto não-orgânico. Esse evento, chamado posteriormente de Síntese de Wöhler, acabou por derrubar a teoria da força vital.</p>
