Inserido texto e títulos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>OPV</h1>
+    <h2>Células Fotovoltáicas</h2>
     <p>A demanda mundial de energia é 13 TW de potência e estima-se 30 TW em
     2050, aumento ocasionado principalmente pelo: crescimento econômico de países
     em desenvolvimento, aumento populacional e facilidade de acesso a equipamentos
@@ -56,6 +57,28 @@
     inferior a do topo da atmosfera devido a absorções de moléculas presentes (área
     sombreada), podendo ocorrer também retroespalhamento por aerossóis e nuvens
     (área não sombreada) [11].</p>
+    <p>A intensidade de luz que chega a superfície da terra depende da distância
+    que a luz percorre na atmosfera ou a massa de ar atmosférico – AM (air mass).
+    Conforme a Figura 1.2, o AM0 corresponde à emissão solar que chega ao topo da
+    atmosfera, AM1.0 é a luz que chega a superfície terrestre quando o sol está no
+    zênite e AM1.5 é a luz que chega a terra após atravessar 1.5 atmosferas
+    ocasionadas pela rotação da Terra em relação ao sol. </p>
+<p>Necessariamente a intensidade de luz decresce na ordem AM0 > AM1.0 >
+    AM1.5. Estes valores podem ser obtidos em laboratório com a utilização de uma
+    fonte luminosa apropriada e a utilização de filtros que simulam as absorções
+    causadas pela atmosfera.</p>
+<p>Os Polímeros Conjugados (PCs) são uma opção para redução do custo de
+    produção e instalação de células solares denominadas de dispositivo fotovoltaicos
+    orgânicos – OPV (organic photovoltaic), caracterizados por possuírem uma ou mais
+    camadas fotossensíveis compostas por material orgânico, polímeros ou filmes
+    poliméricos entre dois eletrodos com diferentes funções trabalho [4]. Os OPVs
+    apresentam flexibilidade mecânica e possibilidade de incorporação a materiais
+    preexistentes, como: coberturas, telhados e janelas.</p>
+<p>Os PCs podem ser dispersos e aplicados diretamente sobre os eletrodos, ou
+    podem ser sintetizados eletroquimicamente diretamente sobre os eletrodos.</p>
+<p>Na seção 1.1 serão apresentadas as principais características químicas dos
+    PCs. </p>
+<h2>1.1 Polímeros Conjugados (PC)</h2>
 </body>
 </html>
 
