--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <h1>OPV</h1>
-    <h2>Células Fotovoltáicas</h2>
-    <p>A demanda mundial de energia é 13 TW de potência e estima-se 30 TW em
+        <h2>Células Fotovoltáicas</h2>
+            <p>A demanda mundial de energia é 13 TW de potência e estima-se 30 TW em
     2050, aumento ocasionado principalmente pelo: crescimento econômico de países
     em desenvolvimento, aumento populacional e facilidade de acesso a equipamentos
     elétricos e eletrônicos [3].</p>
-    <p>Dentre as fontes de energia elétrica, a energia solar deve ser considerada,
+            <p>Dentre as fontes de energia elétrica, a energia solar deve ser considerada,
     pois a Terra recebe diariamente uma grande quantidade de energia do Sol na forma
     de luz, 1 hora de irradiação solar sobre a superfície da Terra pode suprir a demanda
     mundial por energia elétrica durante um ano [4]. A conversão da energia solar em
     energia elétrica ocorre em células solares, ou dispositivos fotovoltaicos [5-7].</p>
-    <p>Brazmi em 2011 relatou que entre outras fontes de energia elétrica, a energia
+            <p>Brazmi em 2011 relatou que entre outras fontes de energia elétrica, a energia
     fotovoltaica, em 2009, teve uma taxa de crescimento anual de cerca de 40% com
     aplicações em regiões de países em desenvolvimento não conectadas a redes
     elétricas e nos países desenvolvidos com a instalação de módulos dispersos em
@@ -29,7 +29,7 @@
     desenvolvimento são os custos de produção e instalação quando comparadas a 
     outras fontes de energia elétrica (carvão, gás e óleo: custo médio de 3-6 U$/kWh e
     as hidrelétricas: custo médio de 4 – 10 U$/kWh) [7].</p>
-    <p>Um dispositivo fotovoltaico ou célula solar utiliza energia luminosa para
+            <p>Um dispositivo fotovoltaico ou célula solar utiliza energia luminosa para
     geração de energia elétrica [8]. O primeiro registro da conversão de energia
     luminosa em energia elétrica foi relatado em 1839 por Becquerel, com a observação
     da ação da luz sobre eletrodos em contato com eletrólitos gerando energia elétrica
@@ -38,47 +38,98 @@
     primeira patente de dispositivo fotovoltaico foi depositada por Ed. Weston em 1888
     (US389124 e US389125), porém a Era da energia fotovoltaica iniciou em 1954
     utilizando Silício cristalino como material fotossensível [9, 10].</p>
-    <p>Os processos para produção de dispositivos fotovoltaicos baseados em silício
+            <p>Os processos para produção de dispositivos fotovoltaicos baseados em silício
     cristalino (c-Si) consomem muita energia devido às altas temperaturas (400 a 1400º
     C) e alto vácuo utilizados nos diversos processos de litografia, além dos processos
     de crescimento, corte e polimento das placas de silício. Estes fatores somados aos
     procedimentos de instalação encarecem o preço final do produto, tornado os
     dispositivos inviáveis economicamente [8, 6].</p>
-    <p>Para tanto é relevante pesquisar e desenvolver novos materiais e tecnologias
+            <p>Para tanto é relevante pesquisar e desenvolver novos materiais e tecnologias
     para aproveitamento da energia solar, visando redução do custo de fabricação e
     instalação. Outros fatores a serem observados são: aumentar a eficiência de
     conversão e o tempo de vida útil dos dispositivos, para torná-los economicamente
     viáveis, além de ambientalmente correto. </p>
-    <p>Para um material ser utilizado como camada fotossensível em um dispositivo
+            <p>Para um material ser utilizado como camada fotossensível em um dispositivo
     fotovoltaico, deve possuir alto coeficiente de absorção de luz em relação ao espectro
-    de emissão solar. A emissão espectral solar no zênitei
-    (altura = 90º) pode ser
+    de emissão solar. A emissão espectral solar no zênitei (altura = 90º) pode ser
     representada conforme a Figura 1.1, em que a luz que chega ao nível do mar é
     inferior a do topo da atmosfera devido a absorções de moléculas presentes (área
     sombreada), podendo ocorrer também retroespalhamento por aerossóis e nuvens
     (área não sombreada) [11].</p>
-    <p>A intensidade de luz que chega a superfície da terra depende da distância
+            <p>A intensidade de luz que chega a superfície da terra depende da distância
     que a luz percorre na atmosfera ou a massa de ar atmosférico – AM (air mass).
     Conforme a Figura 1.2, o AM0 corresponde à emissão solar que chega ao topo da
     atmosfera, AM1.0 é a luz que chega a superfície terrestre quando o sol está no
     zênite e AM1.5 é a luz que chega a terra após atravessar 1.5 atmosferas
     ocasionadas pela rotação da Terra em relação ao sol. </p>
-<p>Necessariamente a intensidade de luz decresce na ordem AM0 > AM1.0 >
+            <p>Necessariamente a intensidade de luz decresce na ordem AM0 > AM1.0 >
     AM1.5. Estes valores podem ser obtidos em laboratório com a utilização de uma
     fonte luminosa apropriada e a utilização de filtros que simulam as absorções
     causadas pela atmosfera.</p>
-<p>Os Polímeros Conjugados (PCs) são uma opção para redução do custo de
+            <p>Os Polímeros Conjugados (PCs) são uma opção para redução do custo de
     produção e instalação de células solares denominadas de dispositivo fotovoltaicos
     orgânicos – OPV (organic photovoltaic), caracterizados por possuírem uma ou mais
     camadas fotossensíveis compostas por material orgânico, polímeros ou filmes
     poliméricos entre dois eletrodos com diferentes funções trabalho [4]. Os OPVs
     apresentam flexibilidade mecânica e possibilidade de incorporação a materiais
     preexistentes, como: coberturas, telhados e janelas.</p>
-<p>Os PCs podem ser dispersos e aplicados diretamente sobre os eletrodos, ou
+            <p>Os PCs podem ser dispersos e aplicados diretamente sobre os eletrodos, ou
     podem ser sintetizados eletroquimicamente diretamente sobre os eletrodos.</p>
-<p>Na seção 1.1 serão apresentadas as principais características químicas dos
+            <p>Na seção 1.1 serão apresentadas as principais características químicas dos
     PCs. </p>
-<h2>1.1 Polímeros Conjugados (PC)</h2>
+        <h2>1.1 Polímeros Conjugados (PC)</h2>
+    <p>Um polímero pode ser obtido da reação entre moléculas menores chamadas
+    de monômeros formando longas cadeias. As propriedades físico-químicas dos
+    polímeros dependem de vários fatores, tais como: natureza do monômero,
+    configuração das ligações entre monômeros, interação entre as cadeias poliméricas
+    e presença de aditivos e impurezas [12].</p>  
+    <p>Os polímeros sintéticos, ou somente polímeros, são utilizados em grande
+    escala no setor industrial, sendo caracterizados por serem bons isolantes térmicos e
+    elétricos, possuírem elevada resistência mecânica, alta estabilidade química,
+    versatilidade e relativamente de fácil produção. Estes materiais tiveram um grande
+    impacto na sociedade, e progressivamente tornaram-se indispensáveis, criando um
+    forte vínculo entre a Química e a Engenharia de Materiais.</p>
+    <p>Devido aos polímeros serem tradicionalmente isolantes elétricos, a
+    descoberta de um polímero intrinsecamente condutor no final da década de 70,
+    chamou a atenção da comunidade científica. A descoberta teve início em 1976 no
+    Instituto de Tecnologia de Tóquio, onde na equipe liderada por Hideki Shirakawa foi
+    obtido um filme de poliacetileno com brilho metálico. Em 1977, na Universidade da
+    Pensilvânia, MacDiarmind e Heeger verificaram um aumento em várias ordens de
+    grandezas na condutividade do filme produzido por Shirakawa, quando exposto ao
+    vapor de iodo, processo denominado de dopagem em analogia aos semicondutores
+    inorgânicos [13]. Esta descoberta rendeu o Nobel de química ao grupo em 2000 [14].</p> 
+    <p>Os PC’s atraíram a atenção de vários pesquisadores para entender as
+    propriedades deste novo material, porém somente a partir 1990 houve um aumento
+    pelo interesse na aplicação tecnológica em diversos dispositivos, como por exemplo:
+    células solares, transistores de efeito de campo, o-LED (organic light-emitting diode),
+    memórias e sensores [15].</p>
+    <p>Na Figura 1.3 está representada a estrutura dos polímeros conjugados mais
+    estudados. A principal característica química destes materiais é a presença de ligações duplas conjugadas (i.e. ligações πii alternadas) entre carbonos na cadeia
+    polimérica.</p> 
+    <p>No Quadro 1 são comparadas as condutividades em siemens por centímetro -
+    S/cm, de diversos materiais condutores e semicondutores. No detalhe a faixa de
+    condutividade que abrange os polímeros conjugados.</p>
+    <p>Na eletrônica orgânica, o carbono é o átomo responsável pela formação da
+    estrutura das cadeias dos PCs, e os dispositivos que utilizam PCs são denominados
+    dispositivos orgânicos.</p>
+    <p>As ligações formadas entre os átomos de carbono podem ser explicadas pela
+    configuração eletrônica: 1s2 2s2 2p2, em que os elétrons 1s são denominados
+    “elétrons de caroço”, os elétrons 2s e 2p são denominados de “elétrons de valência”
+    sendo os elétrons que participam das ligações químicas. </p>
+    <p><h3>A hibridização sp2</h3>
+    representada na Figura 1.4 (a), é a mais comum nos PCs,
+    ocasionado pela combinação entre os orbitais 2s, 2px e o 2py, originando 3 orbitais sp2
+    capaz de realizar 3 ligações sigma – σ. O átomo sp2
+    possui geometria triângulo
+    planar, sendo que o orbital pz puro (i.e. que não sofreu hibridização) permanece
+    perpendicular ao plano dos orbitais sp2. </p>
+    <p>Na Figura 1.4 (b) é ilustrada a aproximação de dois átomos sp2, gerando a
+    sobreposição frontal σ dos orbitais sp2
+    e a sobreposição lateral (pi – π) dos orbitais
+    pz. </p>
+    <p>A combinação de funções de onda dos orbitais pode ser construtiva (ligante)
+    ou destrutiva (antiligante – representada pelo símbolo “*”). No estado fundamental 2
+    elétrons ocupam o orbital ligante e o antiligante permanece vazio. </p>
 </body>
 </html>
 
