--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 sendo os elétrons que participam das ligações químicas. </p>
 
                 <p><h3>A hibridização sp2</h3>
-                representada na Figura 1.4 (a), é a mais comum nos PCs,
+                <p>Figura 1.4 - (a)representada na Figura 1.4 (a), é a mais comum nos PCs,
                 ocasionado pela combinação entre os orbitais 2s, 2px e o 2py, originando 3 orbitais sp2
                 capaz de realizar 3 ligações sigma – σ. O átomo sp2
                 possui geometria triângulo
