--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-                teste
+                <h1>teste</h1>
+                <img src=""
     </header>
 
     <main>
