--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
                 <h1>teste</h1>
-                <img id= "imagemprincipal"> src= "pordosol.png" alt-"Pôr do Sol"
+                <img id= "imagemprincipal"> src= "pordosol.png" alt= "Pôr do Sol"
     </header>
 
     <main>
