--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
                 <h1>teste</h1>
-                <img id= "imagemprincipal"> src="pordosol.png" alt= "Pôr do Sol"
+                <img id= "imagemprincipal" src="pordosol.png" alt= "Pôr do Sol">
     </header>
 
     <main>
@@ -64,15 +64,16 @@
                 viáveis, além de ambientalmente correto. </p>  
     
                 <p>Para um material ser utilizado como camada fotossensível em um dispositivo
-                foto[11].</p>
-   
-                <p>A intensidade de luz que chega a superfície da terra depende da distância
+                foto[11], a intensidade de luz que chega a superfície da terra depende da distância
                 que a luz percorre na atmosfera ou a massa de ar atmosférico – AM (air mass).
                 Conforme a Figura 1.2, o AM0 corresponde à emissão solar que chega ao topo da
                 atmosfera, AM1.0 é a luz que chega a superfície terrestre quando o sol está no
                 zênite e AM1.5 é a luz que chega a terra após atravessar 1.5 atmosferas
                 ocasionadas pela rotação da Terra em relação ao sol. </p>  
-   
+<p id="Figura"Figura 1.1 - Espectro de emissão solar, sol no zênite. Curva superior: no topo da atmosfera. Curva
+    inferior: ao nível do mar; área sombreada: perdas por absorção média das moléculas presentes na
+    atmosfera e área não sombreada: perdas por retroespalhamento e aerossóis.</p>
+    
                 <p>Necessariamente a intensidade de luz decresce na ordem AM0 > AM1.0 >
                 AM1.5. Estes valores podem ser obtidos em laboratório com a utilização de uma
                 fonte luminosa apropriada e a utilização de filtros que simulam as absorções
