--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-                <h1><strong>Energia Limpa</h1></strong>
+                <h1>Energia Limpa</h1>
                 <img id= "imagemprincipal" src="pordosol.png" alt= "Pôr do Sol">
     </header>
 
