--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 zênite e AM1.5 é a luz que chega a terra após atravessar 1.5 atmosferas
                 ocasionadas pela rotação da Terra em relação ao sol. </p>  
                 
-                <p id="Figura"></p> Figura 1.1 - Espectro de emissão solar, sol no zênite. Curva superior: no topo da atmosfera. Curva
+                <p id="Figura">Figura 1.1 - Espectro de emissão solar, sol no zênite. Curva superior: no topo da atmosfera. Curva
                 inferior: ao nível do mar; área sombreada: perdas por absorção média das moléculas presentes na
                 atmosfera e área não sombreada: perdas por retroespalhamento e aerossóis.</p>
     
