--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
                 <h1>Energia Limpa</h1>
-                <img id= "imagemprincipal" src="banner.png" alt= "banner">
+                <img id= "banner" src="banner.png" alt= "banner">
     </header>
 
     <main>
