--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </header>
     <main>
         <h2>OPV</h2>
+        <div class="paragrafos"> 
             <h3>Células Fotovoltáicas</h3>
             
                 <p>A demanda mundial de energia é 13 TW de potência e estima-se 30 TW em
@@ -91,7 +92,8 @@
 
                 <p>Na seção 1.1 serão apresentadas as principais características químicas dos
                 PCs. </p>
-
+        </div>
+        <div>            
             <h3><strong>1.1 Polímeros Conjugados (PC)</strong></h3>
 
                 <p>Um polímero pode ser obtido da reação entre moléculas menores chamadas
@@ -167,6 +169,23 @@
                 geram uma distribuição eletrônica de estados similar à estrutura de bandas, em que o orbital molecular ocupado de maior energia (Highest Ocuppied Molecular Orbial -
                 HOMO) é relacionado com o estado π ligante, o orbital molecular desocupado de
                 menor energia (Lowest Unoccupied Molecular Orbital – LUMO) está relacionado ao π*.</p>
+        </div>   
+        <div>
+            <img src="absorcao AM15.png" alt="absorção AM 1.5">
+            <ul>
+                <li>Primeiro</li>
+                <li>Segundo</li>
+                <li>Terceiro</li>
+                <li>Quarto</li>
+            </ul>
+            <ol>
+                <li>Primeiro</li>
+                <li>Segundo</li>
+                <li>Terceiro</li>
+                <li>Quarto</li>
+            </ol>
+        </div>
+    
             </main>
 
         <footer>
