--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
                 Conforme a Figura 1.2, o AM0 corresponde à emissão solar que chega ao topo da
                 atmosfera, AM1.0 é a luz que chega a superfície terrestre quando o sol está no
                 zênite e AM1.5 é a luz que chega a terra após atravessar 1.5 atmosferas
-                ocasionadas pela rotação da Terra em relação ao sol. </p>  
-                
+                ocasionadas pela rotação da Terra em relação ao sol. </p> 
+
+            <img src="absorcao AM15.png" alt="absorção AM 1.5">
+
                 <p class="figura">Figura 1.1 - Espectro de emissão solar, sol no zênite. Curva superior: no topo da atmosfera. Curva
                 inferior: ao nível do mar; área sombreada: perdas por absorção média das moléculas presentes na
                 atmosfera e área não sombreada: perdas por retroespalhamento e aerossóis.</p>
