--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h2>OPV</h2>
-        <div class="paragrafos"> 
+        <div class="paragrafos1"> 
             <h3>Células Fotovoltáicas</h3>
             
                 <p>A demanda mundial de energia é 13 TW de potência e estima-se 30 TW em
@@ -95,7 +95,7 @@
                 <p>Na seção 1.1 serão apresentadas as principais características químicas dos
                 PCs. </p>
         </div>
-        <div>            
+        <div class="paragrafos2">            
             <h3><strong>1.1 Polímeros Conjugados (PC)</strong></h3>
 
                 <p>Um polímero pode ser obtido da reação entre moléculas menores chamadas
@@ -172,7 +172,7 @@
                 HOMO) é relacionado com o estado π ligante, o orbital molecular desocupado de
                 menor energia (Lowest Unoccupied Molecular Orbital – LUMO) está relacionado ao π*.</p>
         </div>   
-        <div>
+        <div class="paragrafos3">
             <img src="absorcao AM15.png" alt="absorção AM 1.5">
             <ul>
                 <li>Primeiro</li>
