--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 menor energia (Lowest Unoccupied Molecular Orbital – LUMO) está relacionado ao π*.</p>
         </div>   
         <div>
-            <img src="absorcao AM15.png" alt="absorção AM 1.5">
+            <img id= "am1.5" src="absorcao AM15.png" alt="absorção AM 1.5">
             <ul>
                 <li>Primeiro</li>
                 <li>Segundo</li>
