--- a/index.html
+++ b/index.html
@@ -174,12 +174,14 @@
         </div>   
         <div>
             <img id= "am15" src="absorcao AM15.png" alt="absorção AM 1.5">
+<!--lista-->
             <ul>
                 <li>Primeiro</li>
                 <li>Segundo</li>
                 <li>Terceiro</li>
                 <li>Quarto</li>
             </ul>
+<!--lista-->
             <ol>
                 <li>Primeiro</li>
                 <li>Segundo</li>
