--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
                 menor energia (Lowest Unoccupied Molecular Orbital – LUMO) está relacionado ao π*.</p>
         </div>   
         <div>
+            <h2>Espestro solar</h2>
             <img id= "am15" src="absorcao AM15.png" alt="absorção AM 1.5">
 <!--lista-->
             <ul>
