correcao imagem AM15

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                 menor energia (Lowest Unoccupied Molecular Orbital – LUMO) está relacionado ao π*.</p>
         </div>   
         <div>
-            <h2>Espestro solar</h2>
-            <img id= "am15" src="absorcao AM15.png" alt="absorção AM 1.5">
+            <h2>Espectro solar</h2>
+            <img src="absorcao AM15.png" class=imagemAM15 alt="absorção AM 1.5">
 <!--lista-->
             <ul>
                 <li>Primeiro</li>
