--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
             <img src="absorcao AM15.png" class=imagemAM15 alt="absorção AM 1.5">
 <!--lista-->
             <ul>
-                <li>Primeiro</li>
-                <li>Segundo</li>
-                <li>Terceiro</li>
-                <li>Quarto</li>
+                <li> class="itens" Primeiro</li>
+                <li> class="itens" Segundo</li>
+                <li> class="itens" Terceiro</li>
+                <li> class="itens" Quarto</li>
             </ul>
 <!--lista-->
             <ol>
