--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
             </ul>
 <!--lista-->
             <ol>
-                <li>Primeiro</li>
-                <li>Segundo</li>
-                <li>Terceiro</li>
-                <li>Quarto</li>
+                <li class="itens2">Primeiro</li>
+                <li class="itens2">Segundo</li>
+                <li class="itens2">Terceiro</li>
+                <li class="itens2">Quarto</li>
             </ol>
         </div>
     
