--- a/index.html
+++ b/index.html
@@ -174,21 +174,15 @@
         </div>   
         <div>
             <h2>Espectro solar</h2>
+<!--lista não ordenada-->
+    <ul>
+        <li class="itens"> Em preto: emissão absorvida.</li>
+        <li class="itens"> Em branco: emissão que chega na superfície.</li>
+        <li class="itens"> Terceiro?</li>
+        <li class="itens"> Quarto?</li>
+    </ul>
             <img src="absorcao AM15.png" class=imagemAM15 alt="absorção AM 1.5">
-<!--lista-->
-            <ul>
-                <li class="itens"> Primeiro</li>
-                <li class="itens"> Segundo</li>
-                <li class="itens"> Terceiro</li>
-                <li class="itens"> Quarto</li>
-            </ul>
-<!--lista-->
-            <ol>
-                <li class="itens2">Primeiro</li>
-                <li class="itens2">Segundo</li>
-                <li class="itens2">Terceiro</li>
-                <li class="itens2">Quarto</li>
-            </ol>
+ 
         </div>
     
             </main>
