--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-                <h1><strong>Energia Solar</strong></h1>
+                <h1><strong>Um pouco sobre: Energia Solar</strong></h1>
                 <img id= "banner" src="banner.png" alt= "banner">
     </header>
     <main>
@@ -188,7 +188,7 @@
             </main>
 
         <footer>
-                Dissertação de mestrado Daniel Caetano da Silva - PIPE/UFPR - 2012
+                Introdução parcial do mestrado. Daniel Caetano da Silva - PIPE/UFPR - 2012
         </footer>
     </body>
 </html>
