--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
+
 <body>
     <header>
                 <h1><strong>Um pouco sobre: Energia Solar</strong></h1>
@@ -185,11 +186,11 @@
  
         </div>
     
-            </main>
+</main>
 
-        <footer>
-                Introdução parcial do mestrado. Daniel Caetano da Silva - PIPE/UFPR - 2012
-        </footer>
+<footer>
+            <p>Introdução parcial do mestrado. Daniel Caetano da Silva - PIPE/UFPR - 2012</p>
+</footer>
     </body>
 </html>
 
