--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
                 <h1><strong>Um pouco sobre: Energia Solar</strong></h1>
                 <img id= "banner" src="banner.png" alt= "banner">
+                <img src="logo.png" alt="logomarca efv"
     </header>
     <main>
         <h2>OPV</h2>
