Lista do cabeçalho

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
                 <h1><strong>Um pouco sobre: Energia Solar</strong></h1>
                 <img id= "banner" src="banner.png" alt= "banner">
                 <img src="logo.png" alt="logomarca efv"
+                <ul>
+                    <li><a href="##" Home </a></li>
+                    <li><a href="##" Principal </a></li>
+                    <li><a href="##" Contato </a></li>
+                </ul>
     </header>
     <main>
         <h2>OPV</h2>
