--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <img id= "banner" src="banner.png" alt= "banner">
                 <img src="logo.png" alt="logomarca efv"
                 <ul>
-                    <li><a href="##" Home </a></li>
-                    <li><a href="##" Principal </a></li>
-                    <li><a href="##" Contato </a></li>
+                    <li><a href="##">Home </a></li>
+                    <li><a href="##">Principal </a></li>
+                    <li><a href="##">Contato </a></li>
                 </ul>
     </header>
     <main>
