--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
 
 <body>
     <header>
-                <h1><strong>Um pouco sobre: Energia Solar</strong></h1>
+
+              <h1><strong>Um pouco sobre: Energia Solar</strong></h1>
                 <img id= "banner" src="banner.png" alt= "banner">
                 <img src="logo.png" alt="logomarca efv"
-                <ul>
-                    <li><a href="##">Home </a></li>
-                    <li><a href="##">Principal </a></li>
-                    <li><a href="##">Contato </a></li>
-                </ul>
+<!-- 
+    <ul>
+        <li><a href="##">Home </a></li>
+        <li><a href="##">Principal </a></li>
+        <li><a href="##">Contato </a></li>
+    </ul>
+-->             
+                <li><a href="https://github.com/MscCaetano">GitHub</a></li>
+                <li><a href="mailto: msccaetano@yahoo.com.br">Email</a></li>  
+                <li><a href="tel:+55 41984489453">Telefone</a></li>
+            <ul>
+           </header>
+
     </header>
     <main>
         <h3>OPV</h3>
