--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="##">Contato </a></li>
     </ul>
 -->             
-                <li><a href="https://github.com/MscCaetano">GitHub</a></li>
+                <li><a href="https://github.com/MscCaetano/GEprogramacao-TurmaN/index.html">Home</a></li>
                 <li><a href="mailto: msccaetano@yahoo.com.br">Email</a></li>  
                 <li><a href="tel:+55 41984489453">Telefone</a></li>
             <ul>
