--- a/index.html
+++ b/index.html
@@ -14,18 +14,15 @@
 
               <h1><strong>Um pouco sobre: Energia Solar</strong></h1>
                 <img id= "banner" src="banner.png" alt= "banner">
-                <img src="logo.png" alt="logomarca efv"
-<!-- 
-    <ul>
-        <li><a href="##">Home </a></li>
-        <li><a href="##">Principal </a></li>
-        <li><a href="##">Contato </a></li>
-    </ul>
--->             
+                <img src="logo.png" alt="logomarca efv" 
+                
+        <nav>
+            <ul>          
                 <li><a target="_blank" href="https://github.com/MscCaetano">Home</a></li>
                 <li><a href="mailto: msccaetano@yahoo.com.br">Email</a></li>  
                 <li><a href="tel:+55 41984489453">Telefone</a></li>
             <ul>
+        </nav>
            </header>
 
     </header>
