--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header>
-
+        <h1>Título </h1>
     </header>
     <main>
-
+        <p>Aqui aparecerá o texto</p>
     </main>
     <footer>
 
