--- a/index.html
+++ b/index.html
@@ -1,22 +1,4 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Minha Página</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-    <script src='main.js'></script>
-</head>
-<body>
-    <header>
-        <h1>Título </h1>
-    </header>
-    <main>
-        <p>Aqui aparecerá o texto</p>
-    </main>
-    <footer>
-
-    </footer>
-</body>
+    <h1>Título</h1>
+    <p>O conteúdo aparecerá aqui.</p>
 </html>
