--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
+<!--Versão mais atualizada do html-->
 <!DOCTYPE html>
-<html lang="en">
+<!--Linguagem do conteúdo-->
+<html lang="pt-br">
 <head>
+<!--mapa de caracteres que estão na página, letra latinas com acento e cedilha-->
     <meta charset="UTF-8">
+<!--VScode microsoft, tag para funcionar corretamente no navegador edge-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!--adapta a página aos diferentes dispositivos como celular, tablet e computadores-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--muda o nome da aba do site no navegador-->
     <title>Document</title>
 </head>
+<!--A partir daqui é o conteúdo que aparecerá no site-->
 <body>
     <h1>Título</h1>
     <p>O conteúdo aparecerá aqui.</p>
