criado css e mudado cor do título

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <!--adapta a página aos diferentes dispositivos como celular, tablet e computadores-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--muda o nome da aba do site no navegador-->
-    <title>Document</title>
+    <title>Minha Página</title>
+<!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <!--A partir daqui é o conteúdo que aparecerá no site-->
 <body>
