inserido imagem positivo

--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
 <body>
     <h1>Título</h1>
     <p>O conteúdo aparecerá aqui.</p>
+    <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de site-->
+    <img src="positivo.png" alt="mão de um homem sinalizando positivo"
 </body>
 </html>
