--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <!--Linguagem do conteúdo-->
 <html lang="pt-br">
 <head>
-<!--mapa de caracteres que estão na página, letra latinas com acento e cedilha-->
+    <!--mapa de caracteres que estão na página, letra latinas com acento e cedilha-->
     <meta charset="UTF-8">
-<!--VScode microsoft, tag para funcionar corretamente no navegador edge-->
+    <!--VScode microsoft, tag para funcionar corretamente no navegador edge-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--adapta a página aos diferentes dispositivos como celular, tablet e computadores-->
+    <!--adapta a página aos diferentes dispositivos como celular, tablet e computadores-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!--muda o nome da aba do site no navegador-->
+    <!--muda o nome da aba do site no navegador-->
     <title>Minha Página</title>
-<!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
+    <!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
     <link rel="stylesheet" href="style.css">
 </head>
 <!--A partir daqui é o conteúdo que aparecerá no site-->
 <body>
+    <!--<h1></h1>...<h6></h6> Títulos e subtítulos-->
     <h1>Título</h1>
+    <!--<p></p> Parágrafos-->
     <p>O conteúdo aparecerá aqui.</p>
     <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de site-->
     <img src="positivo.png" alt="mão de um homem sinalizando positivo"
