--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!--<p></p> Parágrafos-->
     <p>O conteúdo aparecerá aqui.</p>
     <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de acessibilidade de site-->
-    <img src="positivo.png" alt="mão de um homem sinalizando positivo">
+    <!--Usamos o id=" " para chamar no style.css-->
+    <img id="imagempositivo"  src="positivo.png" alt="mão de um homem sinalizando positivo">
 </body>
 </html>
