--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <!--adapta a página aos diferentes dispositivos como celular, tablet e computadores-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--muda o nome da aba do site no navegador-->
-    <title>Minha Página</title>
+    <title><h1>Minha Página</h1></title>
 <!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
     <link rel="stylesheet" href="style.css">
 </head>
 <!--A partir daqui é o conteúdo que aparecerá no site-->
 <body>
-<!--CAbeçalho da página-->
+<!--Cabeçalho da página-->
     <header>       
 <!--<h1></h1>...<h6></h6> Títulos e subtítulos-->
     <h1>Título</h1>
