--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!--adapta a página aos diferentes dispositivos como celular, tablet e computadores-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--muda o nome da aba do site no navegador-->
-    <title><h1>Minha Página</h1></title>
+    <title>Minha Página</title>
 <!--Após criar o file style.css, o navegador precisa encontrar aonde o file está-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -33,7 +33,6 @@
         </div>
     
 <!--<p>
-    <p>O conteúdo aparecerá aqui.</p>
-</p> Parágrafos-->
+    <p>O conteúdo aparecerá aqui.</p></p> Parágrafos-->
 </body>
 </html>
