--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <!--Cabeçalho da página-->
     <header>       
 <!--<h1></h1>...<h6></h6> Títulos e subtítulos-->
+        <img id="logo" src="logo.png" alt="logo EFV"
         <h1>Título</h1>
     </header>
     <main>
