--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header>       
 <!--<h1></h1>...<h6></h6> Títulos e subtítulos-->
             <img id="logo" src="logo.png" alt="logo EFV">
-            <h1>Títulos</h1>
+            <h1 id="titulo">Títulos</h1>
         </header>
     
         <main>
