--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <header>       
 <!--<h1></h1>...<h6></h6> Títulos e subtítulos-->
             <img id="logo" src="logo.png" alt="logo EFV">
-            <h1 id="titulo">Títulos</h1>
+            <ul>
+                <li>home</li>
+                <li>principal</li>
+                <li>contato</li>
+            </ul>
+
         </header>
     
         <main>
