--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--Cabeçalho da página-->
         <header>       
 <!--<h1></h1>...<h6></h6> Títulos e subtítulos-->
-            <img id="logo" src="logo.png" alt="logo EFV">A
+            <img id="logo" src="logo.png" alt="logo EFV">
             <ul>
                 <li>home</li>
                 <li>principal</li>
