--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </header>
     
         <main>
+            Principal
         </main>     
             <div class="principal">
             <h2 class="titulo-centralizado">Sobre</h2>
@@ -55,7 +56,7 @@
 <!--<p>
     <p>O conteúdo aparecerá aqui.</p></p> Parágrafos-->
         <footer>
-            
+            rodapé
         </footer>
     </body>
 </html>
