--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
         <main>
              <h1>Principal</h1>
-             <p>Qual é a origem da eletricidade?</p>
+             <p><strong>Qual é a origem da eletricidade?</strong></p>
         </main>     
           	 
 			    <p>
