--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </header>
         <main>
-             <h1>Principal</h1>
+             <h1><strong>Principal</strong></h1>
              <p><strong>Qual é a origem da eletricidade?</strong></p>
         </main>     
           	 
