--- a/index.html
+++ b/index.html
@@ -28,15 +28,9 @@
         </header>
         <main>
              <h1><strong>Principal</strong></h1>
-             <p><strong>Qual é a origem da eletricidade?</strong></p>
+            
         </main>     
-          	 
-			    <p>
-                </p>
-
-			
-			    <p> 
-                </p>
+            <p id="pergunta"><strong>Qual é a origem da eletricidade?</strong></p>
 		    </div>
             <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de acessibilidade de site-->
             <!--Usamos o id=" " para chamar no style.css-->
