--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--Cabeçalho da página-->
         <header>       
             <!--<h1></h1>...<h6></h6> Títulos e subtítulos-->
-            <img id="logo" src="logo.png" alt="logo EFV">
+            <img id="" src="" alt="">
             <ul>
                 <li>home</li>
                 <li>principal</li>
@@ -34,7 +34,7 @@
 		    </div>
             <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de acessibilidade de site-->
             <!--Usamos o id=" " para chamar no style.css-->
-            <img id="imagempositivo"  src="positivo.png" alt="mão de um homem sinalizando positivo">
+            <img id=""  src="" alt="">
             <p>O conteúdo aparecerá aqui.</p>
         <footer>
            <p>Rodapé</p> 
