--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!--Cabeçalho da página-->
         <header>       
             <!--<h1></h1>...<h6></h6> Títulos e subtítulos-->
-            <img id="" src="" alt="">
+            <img id="banner" src="banner.jpg" alt="banner de raios">
             <ul>
                 <li>home</li>
                 <li>principal</li>
