--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <p id="pergunta"><strong>Qual é a origem da eletricidade?</strong></p>
             <h2>Sequência</h2>
             <p>As fontes da corrente na antiga grécia, Zeus lançava raios para punir os pecadores e arrogantes. Para os romanos esta tarefa era realizada por Júpiter.</p>
+            <p>Hoje sabemnos que a enrgia elétrica é fabricada em centrais elétricas e dispositicos chamados de pilhas. A eletricidade também pade ser armazenada nas baterias. Mas como isto acontece?</p>            
         </body>> 
 		    </div>
             <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de acessibilidade de site-->
