--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         </main>     
             <p id="pergunta"><strong>Qual é a origem da eletricidade?</strong></p>
             <h2>Sequência</h2>
+                <ul>
+                    <li>item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>        
+                </ul>
             <p>As fontes da corrente na antiga grécia, Zeus lançava raios para punir os pecadores e arrogantes. Para os romanos esta tarefa era realizada por Júpiter.</p>
             <p>Hoje sabemnos que a enrgia elétrica é fabricada em centrais elétricas e dispositicos chamados de pilhas. A eletricidade também pade ser armazenada nas baterias. Mas como isto acontece?</p>            
         </body>> 
