correção do texto

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div>
                 <h1><strong>Principal</strong></h1>
                 <p>As fontes da corrente na antiga grécia, Zeus lançava raios para punir os pecadores e arrogantes. Para os romanos esta tarefa era realizada por Júpiter.</p>
-                <p>Hoje sabemnos que a enrgia elétrica é fabricada em centrais elétricas e dispositicos chamados de pilhas. A eletricidade também pade ser armazenada nas baterias. Mas como isto acontece?</p>            
+                <p>Hoje sabemos que a energia elétrica é fabricada em centrais elétricas e em dispositivos chamados de pilhas. A eletricidade também pade ser armazenada nas baterias. Mas como isto acontece?</p>            
             </div>
         </div>
        
