--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <!--A partir daqui é o conteúdo que aparecerá no site-->
     <body>
-        <!--Parte 1: Cabeçalho da página-->
+        <!--PARTE 1: Cabeçalho da página-->
         <header>       
             <!--o src procura a imagem, pode ser um link da internet ou um arquivo dentro do repositório. O comando alt permite identificar o que tem na imagem para leitores de acessibilidade de site-->
             <!--Usamos o id=" " para chamar no style.css-->
@@ -29,7 +29,7 @@
                 <li>contato</li>
             </ul>
         </header>
-        <!--Parte 2. conteúdo principal do site-->
+        <!--PARTE 2. conteúdo principal do site-->
         <main>
             <h1>Principal</h1>
                 <p id="pergunta"><strong>Qual é a origem da eletricidade?</strong></p>
@@ -42,7 +42,7 @@
                 <p id="especial">As fontes da corrente na antiga grécia, Zeus lançava raios para punir os pecadores e arrogantes. Para os romanos esta tarefa era realizada por Júpiter.</p>
                 <p>Hoje sabemos que a energia elétrica é fabricada em centrais elétricas e em dispositivos chamados de pilhas. A eletricidade também pade ser armazenada nas baterias. Mas como isto acontece?</p>            
         </main>     
-        <!--Parte 3. Radapé-->
+        <!--PARTE 3. Radapé-->
         <footer>
             <p>Rodapé</p> 
         </footer>
